--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -17,6 +17,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  animation: slide-up 0.4s ease;
 }
 
 html, body, #root {
@@ -46,5 +47,16 @@ body, input, button, textarea {
 @media (min-width: 700px) {
   :root {
     font-size: 62.5%;
+  }
+}
+
+@keyframes slide-up {
+  0% {
+      opacity: 0;
+      transform: translateY(20px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
   }
 }
