--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,13 +1,13 @@
-.input-block {
+.input_block {
   position: relative;
   margin: 1rem 0;
 }
 
-.input-block label {
+.input_block label {
   font-size: 1.4rem;
 }
 
-.input-block input {
+.input_block input {
   width: 100%;
   height: 5.6rem;
   margin-top: 0.8rem;
@@ -20,7 +20,7 @@
   color: var(--color-background);
 }
 
-.input-block:focus-within::after {
+.input_block:focus-within::after {
   width: calc(100% - 3.2rem);
   height: 2px;
   content: '';
