--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -1,16 +1,16 @@
-.select-block {
+.select_block {
   position: relative;
 }
 
-.select-block + .select-block {
+.select_block + .select_block {
   margin-top: 1.4rem;
 }
 
-.select-block label {
+.select_block label {
   font-size: 1.4rem;
 }
 
-.select-block select {
+.select_block select {
   width: 100%;
   height: 5.6rem;
   margin-top: 0.8rem;
@@ -22,7 +22,7 @@
   font: 1.6rem Lato;
 }
 
-.select-block:focus-within::after {
+.select_block:focus-within::after {
   width: calc(100% - 3.2rem);
   height: 2px;
   content: '';
