--- a/src/pages/fare/Calculation.module.css
+++ b/src/pages/fare/Calculation.module.css
@@ -1,4 +1,4 @@
-#fare-calculation{
+.fare_calculation{
   width: 100vw;
   height: 100vh;
   padding: 2rem;
@@ -8,39 +8,39 @@
   justify-content: space-between;
 }
 
-#fare-calculation .logo-container .text {
+.fare_calculation .logo_container .text {
   font: 700 4rem Lato;
   margin: 1rem 0;
 }
 
-#fare-calculation .logo-container {
+.fare_calculation .logo_container {
   text-align: center;
   margin: 5rem 0;
 }
 
-#fare-calculation .logo-container img {
+.fare_calculation .logo_container img {
   height: 7rem;
 }
 
-#fare-calculation .logo-container #back-icon {
+.fare_calculation .logo_container .back_icon {
   height: 3rem;
   float: left;
 }
 
-#fare-calculation .loading {
+.fare_calculation .loading {
   display: flex;
   justify-content: center;
   margin-top: 30%;
   margin-bottom: auto;
 }
 
-#fare-calculation .bottom-input {
+.fare_calculation .bottom_input {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 4rem;
 }
 
-#fare-calculation footer button {
+.fare_calculation footer button {
   width: 100%;
   height: 5.6rem;
   background: var(--color-button-main);
@@ -57,21 +57,21 @@
   margin-top: 3.2rem;
 }
 
-#fare-calculation footer button:hover {
+.fare_calculation footer button:hover {
   background: var(--color-button-main-darker);
 }
 
-#fare-calculation footer p {
+.fare_calculation footer p {
   text-align: center;
   margin: 2rem 0;
 }
 
-#fare-calculation footer p a {
+.fare_calculation footer p a {
   text-decoration: none;
   color: var(--color-input);
 }
 
-.input-block input {
+.input_block input {
   width: 100%;
   height: 5.6rem;
   margin-top: 0.8rem;
