--- a/src/pages/fare/result/Result.module.css
+++ b/src/pages/fare/result/Result.module.css
@@ -60,3 +60,24 @@
 .observations p + p {
   font-size: 15px;
 }
+
+.button_share {
+  width: 100%;
+  height: 5.6rem;
+  background: var(--color-button-main);
+  color: var(--color-background);
+  border: 0;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  font: 700 2rem Lato;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  transition: background-color 0.2s;
+  margin-bottom: 3.2rem;
+}
+
+.button_share:hover {
+  background: var(--color-button-main-darker);
+}
