--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -146,11 +146,15 @@
 
 .logo_container {
   text-align: center;
-  margin: 5rem;
+  margin-top: 5rem;
 }
 
 .logo_container img {
   height: 7rem;
+}
+
+.logo_container p {
+  margin-top: 4rem;
 }
 
 .buttons_container {
@@ -158,7 +162,7 @@
   justify-content: center;
   margin: 10.2rem 0;
   background: var(--color-button-text);
-  gap: 10rem;
+  gap: 5rem;
 }
 
 .buttons_container .button {
