--- a/src/pages/fare/result/Result.module.css
+++ b/src/pages/fare/result/Result.module.css
@@ -24,9 +24,12 @@
   cursor: pointer;
 }
 
-.fare_result footer p {
+.fare_result footer {
+  padding: 3rem;
+}
+
+.fare_result footer {
   text-align: center;
-  margin: 2rem 0;
 }
 
 .fare_result footer p a {
@@ -44,7 +47,7 @@
 .result_value {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 10rem;
+  column-gap: 6rem;
   color: var(--color-background);
   font: 700 2rem Lato;
   margin: 2rem 0;
